# TMCompiler

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  check_files.py  configure.sh  diagnostic.sh  format.sh  main.cpp  notes.txt  pyproject.toml  requirements.txt  run_tests.sh  sample_program.cpp  std_includes.py
TMCompiler/: CMakeLists.txt
TMCompiler/compilation/: compile.cpp  lib.cpp  multi_tape_builder.cpp  unit1.cpp  unit2.cpp  unit2.hpp
TMCompiler/compiler/: compiler.cpp  compiler.hpp
TMCompiler/compiler/front_end/: bnf_parser.cpp  bnf_parser.hpp  earley_parser.cpp  earley_parser.hpp  parser.cpp  parser.hpp
TMCompiler/compiler/lexer/: lexer.cpp  lexer.hpp
TMCompiler/compiler/models/: README.md  bnf_parser.cpp  bnf_parser.hpp  earley_parser.cpp  earley_parser.hpp  grammar.cpp  grammar.hpp  grammar_symbol.hpp  language_specification.cpp  language_specification.hpp  rule.hpp  symbol.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
TMCompiler/compiler/parser/: earley_parser.cpp  earley_parser.hpp
TMCompiler/compiler/utils/: bnf_parser.cpp  bnf_parser.hpp
TMCompiler/config/: language.toml  language_grammar.bnf  language_lexical_grammar.bnf  regex_lexical_grammar.bnf
TMCompiler/old/compilation/: assemblyRunner.cpp  compile.cpp  compile.hpp  lib2.cpp  libNewCopy.cpp  multi_tape_builder.hpp  unit1.hpp
TMCompiler/old/programs/: fibonacci.cpp  temp.cpp
TMCompiler/old/runner/: simulateRunner.cpp
TMCompiler/old/tm_definition/: multi_tape_turing_machine.hpp  tape.cpp  transition.hpp
TMCompiler/old/utils/: helper.hpp
TMCompiler/programs/: bfs.cpp  example.cpp  example_temp.cpp  heapsort.cpp
TMCompiler/runner/: compile.cpp  compileRunner.cpp  runner.cpp  simulate.cpp  simulateRunner.cpp
TMCompiler/src/argparse/: argument_parser.cpp  argument_parser.hpp
TMCompiler/src/compiler/front-end/preprocessing/: macro_processing.hpp
TMCompiler/src/text_editor/: text_editor.cpp  text_editor.hpp
TMCompiler/src/turing-machine/: README.md
TMCompiler/src/unittesting/: macros.hpp  unittests.hpp
TMCompiler/test/: test_text_editor.cpp  test_unittesting.cpp
TMCompiler/tests/: test_bnf_parser.cpp  test_compiler.cpp  test_grammar_parser.cpp  test_language_specification.cpp  test_lexer.cpp  test_text_editor.cpp  test_unittesting.cpp
TMCompiler/tests/data/: example_grammar.bnf  example_lexical_grammar.bnf
TMCompiler/tm_definition/: multi_tape_turing_machine.cpp  multi_tape_turing_machine.hpp  tape.cpp  tape.hpp  transition.cpp  transition.hpp
TMCompiler/turing-machine/: shift.hpp  tape.hpp
TMCompiler/turing_machine/: symbol.hpp  tape.hpp
TMCompiler/utils/: constants.hpp  helper.cpp  helper.hpp
TMCompiler/utils/argparse/: README.md  argument.hpp  argument_parser.cpp  argument_parser.hpp
TMCompiler/utils/development/: std_includes.py
TMCompiler/utils/logger/: logger.cpp  logger.hpp  logger.tpp
TMCompiler/utils/logging/: logging.cpp  logging.hpp
TMCompiler/utils/text_editor/: text_editor.cpp  text_editor.hpp
TMCompiler/utils/unittesting/: unittests.cpp  unittests.hpp
programs/: bfs.cpp  bfs_temp.cpp  example.cpp  example_temp.cpp  fibonacci.cpp  malloc.cpp  temp.cpp
src/compilation/: 	  ;  Makefile  \  assembly.txt  assembly2.txt  assemblyRunner.cpp  compile.cc  compile.cpp  example.source  example_temp.cpp  lib.cpp  lib.txt  multi_tape_builder.cpp  multi_tape_builder.h  output.txt  temp.txt  unit1.cpp  unit1.h  unit2.cpp  unit2.h  utils.cpp  utils.h
src/programs/: example.cpp  example_temp.cpp
src/tm_definition/: .single_tape_turing_machine.cpp.swp  .single_tape_turing_machine.hpp.swp  .tape.cc.swp  config.h  constants.h  multi_tape_turing_machine.cpp  multi_tape_turing_machine.h  multi_tape_turing_machine.hpp  runner.cc  runner.cpp  singleTapeTuringMachine.cc  singleTapeTuringMachine.h  single_tape_turing_machine.cpp  single_tape_turing_machine.h  single_tape_turing_machine.hpp  tape.cc  tape.cpp  tape.h  tape.hpp  transition.cpp  transition.h  transition.hpp  turing_machine.hpp
